--- a/projeto-y/src/app/menuInferior.module.css
+++ b/projeto-y/src/app/menuInferior.module.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #9affdc;
+  background-color: #f5f5f5;
   padding-bottom: 0.5rem;
   width: 100vw;
   height: 4rem;
