--- a/projeto-y/src/app/menuSuperior.module.css
+++ b/projeto-y/src/app/menuSuperior.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #9affdc;
+  background-color: #f5f5f5;
   gap: 3rem;
   padding-top: 0.5rem;
   width: 100vw;
