--- a/projeto-y/src/app/postagens.module.css
+++ b/projeto-y/src/app/postagens.module.css
@@ -8,7 +8,6 @@
     "a b b"
     "c c c"
     "d d d";
-  margin-bottom: 0.25rem;
 }
 
 .avatar {
@@ -43,6 +42,7 @@
 
 .nomedousuario {
   width: 100%;
+  height: 50%;
   font-weight: bolder;
   font-family: "Open Sans", sans-serif;
 }
@@ -52,17 +52,18 @@
   font-family: "Open Sans", sans-serif;
   font-size: 0.75rem;
   color: #888;
+  height: 50%;
 }
 
 .p {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 .Mensagem {
   font-size: 0.9rem;
   font-family: "Open Sans", sans-serif;
-  margin: 5px;
+  margin-left: 5px;
   grid-area: c;
 }
 
@@ -71,6 +72,7 @@
   justify-content: space-evenly;
   align-items: center;
   grid-area: d;
+  height: 10vw;
 }
 
 .svg {
