--- a/projeto-y/src/app/criarConta.module.css
+++ b/projeto-y/src/app/criarConta.module.css
@@ -13,6 +13,27 @@
   z-index: 20;
 }
 
+.dark {
+  background-color: #111;
+}
+
+.dark2 {
+  background-color: white;
+  color: black;
+  font-weight: 600;
+  width: 160px;
+  height: 40px;
+  border-radius: 50px;
+  font-size: 1.25rem;
+  font-family: "Open Sans", sans-serif;
+  margin-top: 1rem;
+  border: none;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .pato img {
   width: 5rem;
   height: 5rem;
