Add white styles to svgs

--- a/projeto-y/src/app/postagens.module.css
+++ b/projeto-y/src/app/postagens.module.css
@@ -15,6 +15,18 @@
   background-color: #111;
 }
 
+.dark2 {
+  color: white;
+}
+
+.username {
+  color: white;
+}
+
+.arroba {
+  color: white;
+}
+
 .avatar {
   grid-area: a;
   display: flex;
