--- a/projeto-y/src/app/formularioPost.module.css
+++ b/projeto-y/src/app/formularioPost.module.css
@@ -18,6 +18,33 @@
   border-radius: 0px;
 }
 
+.dark {
+  background-color: #222;
+}
+
+.dark2 {
+  background-color: #333;
+  color: #f5f5f5;
+}
+
+.dark3:focus {
+  outline: none;
+  border: 1px solid white;
+}
+
+.dark3 {
+  width: 140px;
+  height: 40px;
+  border-radius: 50px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  margin-top: 1rem;
+  border: none;
+  background-color: white;
+  color: black;
+}
+
 .postar {
   width: 140px;
   height: 40px;
