--- a/projeto-y/src/app/login.module.css
+++ b/projeto-y/src/app/login.module.css
@@ -19,11 +19,20 @@
   background-color: #111;
 }
 
-.dark2 {
-  color: white;
+.lightfont {
+  color: #f5f5f5;
 }
 
-.dark3 {
+.lightpassword {
+  color: #f5f5f5;
+}
+
+.darkinput {
+  background-color: #333;
+  color: #f5f5f5;
+}
+
+.dark5 {
   color: white;
   text-decoration: underline;
   font-weight: bolder;
@@ -33,6 +42,12 @@
   width: 5rem;
   height: 5rem;
   margin-bottom: 1.5rem;
+}
+
+.close button {
+  width: 0;
+  height: 0;
+  border: 0px;
 }
 
 .close img {
@@ -83,18 +98,18 @@
   padding-left: 0.5rem;
 }
 
-.input2 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  font-size: 1.25rem;
-  font-size: 1.25rem;
-  border: 1px solid black;
-  border-radius: 10px;
-  padding-left: 0.5rem;
-}
-
 .conta {
   color: black;
+  text-decoration: underline;
+  font-weight: bolder;
+}
+
+.lightaccount {
+  color: #f5f5f5;
+}
+
+.lightcreate {
+  color: #f5f5f5;
   text-decoration: underline;
   font-weight: bolder;
 }
