--- a/projeto-y/src/app/conta.module.css
+++ b/projeto-y/src/app/conta.module.css
@@ -1,15 +1,14 @@
+.planet {
+  gap: 3vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .container {
   display: flex;
   width: 100%;
-  flex-direction: column;
-  align-items: center;
-  border-bottom: solid 1px #f5f5f5;
-}
-.cabecalho {
-  display: flex;
-  width: 95%;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
   gap: 50px;
 }
@@ -37,8 +36,7 @@
   height: 100%;
 }
 .perfil {
-  width: 38%;
-  margin-left: 1vw;
+  width: 100%;
 }
 .bio {
   height: 15vw;
@@ -47,12 +45,75 @@
 }
 .myfriends {
   display: flex;
-  width: 50%;
+  width: 100%;
   gap: 1.5vw;
+  justify-content: space-evenly;
 }
 .numeros {
   display: flex;
+  width: 10%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+/*container2*/
+.container2 {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5vw;
+}
+.follows {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  height: auto;
+}
+.seguir {
+  height: 9vw;
+  width: 42%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1rem;
+  color: hsl(0, 0%, 10%);
+  border-radius: 8px;
+  border: 0.55vw solid #ffd447;
+  background: transparent;
+}
+.p {
+  margin: 0%;
+  padding: 0%;
+}
+.conteudos {
+  display: flex;
+  width: 90%;
+  height: 9vw;
+  justify-content: space-around;
+}
+.nodestaque {
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+  background-color: transparent;
+  border-bottom: 1vw solid #ffd447;
+  border-top: none;
+  font-weight: 600;
+  font-size: medium;
+  border-left: none;
+  border-right: none;
+  height: 100%;
+  color: hsl(0, 0%, 10%);
+}
+.ydestaque {
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+  background-color: transparent;
+  height: 100%;
+  border: none;
 }
