--- a/projeto-y/src/app/conta.module.css
+++ b/projeto-y/src/app/conta.module.css
@@ -5,6 +5,33 @@
   align-items: center;
   justify-content: center;
 }
+/* cabecalho*/
+.cabecalho {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 15vw;
+  background-color: #f5f5f5;
+}
+.nickname {
+  width: auto;
+  font-size: larger;
+  font-weight: 600;
+}
+.back {
+  width: 15%;
+  height: 5vw;
+}
+.config {
+  width: 15%;
+  height: 5vw;
+}
+.cabecalhoimg {
+  height: 100%;
+  width: 100%;
+}
+/* corpo */
 .container {
   display: flex;
   width: 100%;
