--- a/projeto-y/src/app/timeline.module.css
+++ b/projeto-y/src/app/timeline.module.css
@@ -1,10 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Ma+Shan+Zheng&family=Mina:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: absolute;
+  font-family: "Opens Sans", sans-serif;
   z-index: -20;
-  margin: 0.5rem;
-  margin-top: 4.5rem;
-  padding-bottom: 4.5rem;
+  padding-bottom: 0.5rem;
+  padding-top: 5rem;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+.dark {
+  background-color: #000;
 }
