infoUsuario design ok

--- a/projeto-y/src/app/infoUsuario.module.css
+++ b/projeto-y/src/app/infoUsuario.module.css
@@ -103,6 +103,8 @@
   flex-direction: column;
   width: 100%;
   height: auto;
+  padding-top: 5vw;
+  box-shadow: 0 4px 8px rgba(184, 184, 184, 0.1);
 }
 .h3 {
   margin-left: 4vw;
@@ -115,8 +117,37 @@
 .information {
   width: 100%;
   margin-left: 4vw;
+  margin-bottom: 1.5vw;
+  margin-top: 1.5vw;
 }
 .info {
-  font-size: large;
-  font-weight: 600;
+  font-weight: 450;
+}
+.tap {
+  font-size: medium;
+  font-weight: 300;
+  color: #808080;
+}
+/*containerSettings*/
+.containerSettings {
+  margin-top: 5vw;
+  width: 100%;
+  height: auto;
+  box-shadow: 0 -4px 8px rgba(184, 184, 184, 0.2);
+}
+.settings {
+  display: flex;
+  height: auto;
+  width: 100%;
+  margin-left: 4vw;
+  gap: 1vw;
+  margin-bottom: 1.5vw;
+  margin-top: 1.5vw;
+}
+.imgSettings {
+  height: 5.5vw;
+  width: 5.5vw;
+}
+.img3 {
+  height: 100%;
 }
