--- a/projeto-y/src/app/timeline.module.css
+++ b/projeto-y/src/app/timeline.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  font-family: "Opens Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   z-index: -20;
   padding-bottom: 0.5rem;
   padding-top: 5rem;
