--- a/projeto-y/src/app/infoUsuario.module.css
+++ b/projeto-y/src/app/infoUsuario.module.css
@@ -18,15 +18,13 @@
   box-sizing: border-box;
   overflow-x: hidden;
   transform: translateY(100%);
-  transition: transform 0.3s ease-out;
-  opacity: 0; /* Inicialmente invisível */
+  opacity: 0;
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
 }
 
-/* Nova classe para quando o componente estiver visível */
 .container.visible {
   transform: translateY(0);
-  opacity: 1; /* Totalmente visível */
-  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+  opacity: 1;
 }
 
 /* Animação de entrada */
@@ -41,9 +39,26 @@
   }
 }
 
+/* Animação de saída */
+@keyframes slideOut {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
 /* Aplicar animação quando visível */
 .container.visible {
   animation: slideIn 0.5s ease-out forwards;
+}
+
+/* Aplicar animação quando fechando */
+.container.closing {
+  animation: slideOut 0.5s ease-out forwards;
 }
 
 /* Restante do seu CSS permanece o mesmo */
@@ -67,6 +82,9 @@
   position: absolute;
   top: 0;
   right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .name {
   align-items: center;
@@ -87,6 +105,10 @@
 .close img {
   height: 10vw;
   width: 10vw;
+  position: absolute;
+}
+.img4 {
+  transform: scale(1.3);
 }
 .mudafoto {
   height: 10vw;
