--- a/projeto-y/src/app/login.module.css
+++ b/projeto-y/src/app/login.module.css
@@ -10,7 +10,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #f4f4f4;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 10;
 }
