--- a/projeto-y/src/app/notificacoes.module.css
+++ b/projeto-y/src/app/notificacoes.module.css
@@ -4,14 +4,17 @@
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   width: 100vw;
-  height: 50vh;
-  background-color: #f7f7f7;
-  position: absolute;
+  height: 40vh;
+  position: fixed;
   top: 67px;
-  z-index: 100;
+  z-index: 10;
   overflow-y: scroll;
+  border-bottom: solid 1px black;
+  border-top: solid 1px black;
 }
-
+.dark {
+  background-color: #111;
+}
 .item {
   margin-bottom: 1rem;
   padding: 1rem;
