--- a/projeto-y/src/app/notificacoesItem.module.css
+++ b/projeto-y/src/app/notificacoesItem.module.css
@@ -2,13 +2,17 @@
 
 .container {
   font-family: "Open Sans", sans-serif;
-  background-color: #c7c8cc;
+  background-color: hsl(0, 5%, 96%);
   font-size: 1rem;
   width: 100%;
   height: 6rem;
   padding: 2vw;
 }
 
+.dark {
+  background-color: #111;
+  color: white;
+}
 .imagem img {
   width: 10vw;
   height: 10vw;
