--- a/projeto-y/src/app/notificacoesItem.module.css
+++ b/projeto-y/src/app/notificacoesItem.module.css
@@ -1,17 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Ma+Shan+Zheng&family=Mina:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 .container {
-  font-family: "Open Sans", sans-serif;
-  background-color: #c7c8cc;
-  font-size: 1rem;
-  width: 100%;
-  height: 6rem;
-  padding: 2vw;
+  margin-bottom: 1rem;
+}
+
+.notificacao {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  background-color: #f0f2f5;
+  border-radius: 8px;
+}
+
+.imagem {
+  margin-right: 1rem;
 }
 
 .imagem img {
-  width: 10vw;
-  height: 10vw;
-  margin-left: auto;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
+}
+
+.content {
+  flex: 1;
+}
+
+.message {
+  margin: 0;
+  font-size: 0.9rem;
+}
+
+.timestamp {
+  font-size: 0.8rem;
+  color: #65676b;
 }
