--- a/projeto-y/src/app/menuInferior.module.css
+++ b/projeto-y/src/app/menuInferior.module.css
@@ -13,6 +13,30 @@
   padding-right: 1.5rem;
 }
 
+.hashtaginputcontainer {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.hashtaginput {
+  width: 70%;
+  padding: 5px;
+  margin-right: 5px;
+}
+
+.searchbutton {
+  padding: 5px 10px;
+  background-color: #1da1f2;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
 .dark {
   background-color: #111;
 }
